--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 background-attachment: fixed;
+content: '';
 }
 
 #emo{
@@ -11,5 +12,7 @@ background-attachment: fixed;
     bottom: 4.5%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
+    justify-content: center;
+    text-align: center;
     left: 37%;
 }
